instead of seperate mongo now we have EmbeddedMongoConfiguration